snake provider + search snake + comapre snake

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<!-- Mine -->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We needs your photo library access to upload the photos</string>
 </dict>
 </plist>
