update user + url luncher

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -44,5 +44,10 @@
 	<!-- Mine -->
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We needs your photo library access to upload the photos</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	  <string>sms</string>
+	  <string>tel</string>
+	</array>
 </dict>
 </plist>
