--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   scrollable_positioned_list: ^0.3.5
 
   url_launcher: ^6.1.10
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
