--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   flutter_local_notifications: ^13.0.0
 
   provider: ^6.0.5
-  file_picker: ^5.2.5
+  image_picker: ^0.8.7+1
   permission_handler: ^10.2.0
   intl: ^0.18.0
 
