--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
       </intent>
     </queries>
    <application
-        android:label="snakeapp"
+        android:label="Australian snake identification"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
