--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   url_launcher: ^6.1.10
   shared_preferences: ^2.1.0
+  syncfusion_flutter_pdfviewer: ^21.2.4
 
 dev_dependencies:
   flutter_test:
@@ -42,4 +43,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/info.pdf
   #   - images/a_dot_ham.jpeg
